--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "tailwindcss-hero-patterns": "^0.1.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.1"
   }
 }
