--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.19",
     "next-sitemap": "^4.2.2"
   }
 }
