--- a/package.json
+++ b/package.json
@@ -11,12 +11,6 @@
     "sitemap": "next-sitemap"
   },
   "dependencies": {
-    "@types/node": "20.4.9",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.13",
     "lottie-react": "^2.4.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
@@ -30,6 +24,16 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.19",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "20.4.9",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.13",
+    "jest": "^29.6.3",
     "next-sitemap": "^4.2.2"
   }
 }
