--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
-    "sitemap": "next-sitemap"
+    "sitemap": "next-sitemap",
+    "test": "jest"
   },
   "dependencies": {
     "lottie-react": "^2.4.0",
@@ -33,7 +34,9 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
-    "jest": "^29.6.3",
-    "next-sitemap": "^4.2.2"
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "next-sitemap": "^4.2.2",
+    "ts-jest": "^29.1.1"
   }
 }
